--- a/eBook/09.5.md
+++ b/eBook/09.5.md
@@ -23,7 +23,7 @@ func ReturnStr() string {
 在主程序 package_test.go 中这个包通过声明的方式被导入
 
 ```go
-import "./pack1/pack1"
+import "./pack1" // 注释：这里导入的是包pack1所在的目录
 ```
 
 import 的一般格式如下:
@@ -60,7 +60,11 @@ func main() {
 	ReturnStr from package1: Hello main!
 	Integer from package1: 42
 
-如果包 pack1 和我们的程序在同一路径下，我们可以通过 `"import ./pack1"` 这样的方式来引入，但这不被视为一个好的方法。
+如果包 pack1 和我们的程序在同一路径下，我们可以通过 `"import ./"` 这样的方式来引入，但这不被视为一个好的方法。
+如果编译的话会报这个错误
+```
+main.go:3:8: found packages main (test_package.go) and pack (pack1.go) in 你的路径
+```
 
 下面的代码试图访问一个未引用的变量或者函数，甚至没有编译。将会返回一个错误：
 
